modified size of forcelayout svg to prevent covering of resume icon

--- a/styles/main.css
+++ b/styles/main.css
@@ -271,8 +271,7 @@ circle {
 #force-bubbles {
 	position: relative;
   	width: 100%;
-	height: 450px;
-	margin-top: -80px;
+	background-color: antique-white;
 }
 
 @media (max-width: 3000px) {
